--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         
         body {
             font-family: "Play", sans-serif;
-            background-image: url('2026-01-16 06.18.57.jpg');
+            background-image: url('images/2026-01-16 06.18.57.jpg');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
@@ -29,7 +29,7 @@
             text-align: center;
             margin-bottom: 30px;
             padding: 20px;
-            background-image: url('2026-01-16 06.26.39.jpg');
+            background-image: url('images/2026-01-16 06.26.39.jpg');
             background-size: cover;
             background-attachment: fixed;
             background-position: center;
@@ -97,7 +97,7 @@
     <div class="gallery">
         <!-- Фото 1 -->
         <div class="photo-container">
-            <img src="2026-01-16 05.54.33.jpg" 
+            <img src="images/2026-01-16 05.54.33.jpg" 
                  alt="Моё первое фото" 
                  class="photo">
             <div class="description">
@@ -108,7 +108,7 @@
         
         <!-- Фото 2 -->
         <div class="photo-container">
-            <img src="2026-01-16 05.55.25.jpg" 
+            <img src="images/2026-01-16 05.55.25.jpg" 
                  alt="Моё второе фото" 
                  class="photo">
             <div class="description">
